[package]
name = "canvas-grading"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
clap_complete = "4.5.42"
dirs = "5.0.1"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-macros = "2.5.0"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
